Try overflow fix for iOS.

--- a/index.css
+++ b/index.css
@@ -30,10 +30,16 @@ a {
 
 /* Topmost containers */
 
+html,
+body {
+    overflow: hidden;
+}
+
 body {
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    max-height: 100vh;
+    max-width: 100vw;
     user-select: none;
     font-family: 'Bahnschrift Regular';
     text-transform: uppercase;
